export { BlockBody, BlockHeader, FullBlock, AccountRegistration, BlockId, Edge, GraphEntry, Lock, LockAddress, StakingRegistration, Transaction, TransactionConfirmation, TransactionId, TransactionInput, TransactionOutput, TransactionOutputReference, Vertex, Witness, Asset } from './proto/models/core.js';